# Keebox

./: .gitignore  README.md  next.config.js  package-lock.json  package.json  prettier.config.js
public/: splashscreen.html  splashstyles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  splashscreen.rs
src/components/: greet.tsx
src/components/dock/: BtmDock.tsx
src/lib/: tauri.ts  theme.ts
src/pages/: _app.tsx  _document.tsx  index.tsx
