[package]
name = "keebox"
version = "1.0.0"
description = "A all in one keyboard testing and managment tool"
authors = ["ShyAssassin <49711232+ShyAssassin@users.noreply.github.com>"]
license = "GPLv3"
repository = ""
edition = "2021"
rust-version = "1.60"


[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
